--- a/android/local.properties
+++ b/android/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 01 17:45:55 CET 2018
-sdk.dir=C\:\\Users\\JL255\\AppData\\Local\\Android\\sdk
+#Fri Feb 02 16:34:50 CET 2018
+ndk.dir=C\:\\Users\\arrkiin\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\arrkiin\\AppData\\Local\\Android\\Sdk
