--- a/android/local.properties
+++ b/android/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 02 16:34:50 CET 2018
-ndk.dir=C\:\\Users\\arrkiin\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\arrkiin\\AppData\\Local\\Android\\Sdk
+#Tue Feb 06 13:59:01 CET 2018
+ndk.dir=C\:\\Users\\JL255\\AppData\\Local\\Android\\sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\JL255\\AppData\\Local\\Android\\sdk
