--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+local.properties
+myapp.iml
+
 android/app/build
 android/build
 android/.gradle
