--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.2.0"
-  },
-  "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "test": "node node_modules/jest/bin/jest.js"
-  },
-  "jest": {
-    "preset": "react-native"
-  },
-  "dependencies": {
-    "react": "16.2.0",
-    "react-native": "0.52.0",
-    "react-native-navigation": "^1.1.370",
-    "react-native-vector-icons": "^4.5.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
-  }
+    "name": "my-app",
+    "version": "0.1.0",
+    "private": true,
+    "devDependencies": {
+        "babel-preset-react-native-stage-0": "^1.0.1",
+        "jest-react-native": "^18.0.0",
+        "react-test-renderer": "16.2.0"
+    },
+    "scripts": {
+        "start": "react-native start",
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "test": "node node_modules/jest/bin/jest.js"
+    },
+    "jest": {
+        "preset": "react-native"
+    },
+    "dependencies": {
+        "react": "16.2.0",
+        "react-native": "^0.53.0",
+        "react-native-navigation": "^1.1.370",
+        "react-native-vector-icons": "^4.5.0",
+        "react-redux": "^5.0.6",
+        "redux": "^3.7.2"
+    }
 }
